gccida/g2/complete_array_type
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/complete_array_type/src/c-decl.c:4429:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *i; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/complete_array_type/src/c-decl.c:4430:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/complete_array_type/src/c-decl.c:4431:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/complete_array_type/src/c-decl.c:4451:20: error: expected expression
v12 = ( tree_node *)high[3]; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/complete_array_type/src/c-decl.c:4451:9: error: use of undeclared identifier 'tree_node'
v12 = ( tree_node *)high[3]; 
        ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/complete_array_type/src/obj/c-decl.o] Error 1
